--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This repository has been renamed to http://github.com/kballard/dcpu16
+This repository has been renamed to https://github.com/kballard/dcpu16
